@@ -1,3 +1,7 @@
+2003-02-11  Per Bothner  <per@bothner.com>
+
+	* syntax.scm (defmacro):  Move next to %defmacro.
+
 2003-01-31  Per Bothner  <per@bothner.com>
 
 	* thread.scm (exit):  Fix typo - statuc -> status.
